# Formative_3_Deep_Q_Learning_Pong

./: Formative3.ipynb  README.md  main.py  play.py  pyproject.toml  train.py
experiments/damour/: config.py
experiments/damour/logs/experiment_10/: training_log.csv
experiments/damour/logs/experiment_2/: evaluations.npz  training_log.csv
experiments/damour/logs/experiment_4/: evaluations.npz
experiments/damour/logs/experiment_9/: evaluations.npz
experiments/damour/results/: hyperparameter_table.csv
experiments/daniel/: Daniel_DQN_Experiments.ipynb  config.py
experiments/daniel/logs/experiment_1/: evaluations.npz  training_log.csv
experiments/daniel/logs/experiment_3/: training_log.csv
experiments/daniel/logs/experiment_4/: training_log.csv
experiments/daniel/logs/experiment_5/: training_log.csv
experiments/daniel/logs/experiment_6/: training_log.csv
experiments/daniel/logs/experiment_7/: training_log.csv
experiments/daniel/logs/experiment_8/: training_log.csv
experiments/daniel/logs/experiment_9/: training_log.csv
experiments/daniel/results/: hyperparameter_table.csv
experiments/musembi/: config.py
experiments/musembi/results/: hyperparameter_table.csv
experiments/peace/: Formative3.ipynb  config.py
experiments/peace/logs/experiment_10/: training_log.csv
experiments/peace/results/: hyperparameter_table.csv
