[project]
name = "formative-3-deep-q-learning-pong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[atari]>=1.2.1",
    "numpy>=2.3.3",
    "stable-baselines3[extra]>=2.7.0",
]
